fixed overlapping problem, division of style elements, general layout

--- a/flask/resume_website/resume_webapp/app/static/css/style.css
+++ b/flask/resume_website/resume_webapp/app/static/css/style.css
@@ -5,61 +5,45 @@ body {
   background-color: silver;
 }
 
+ul.contact-info {
+  list-style-type: none;
+}
 
+ul.skills {
+  list-style-type: none;
+  padding-left: 0;
+}
 
-h1 {
-  height: 100px;
-  width: 300px;
+ul.skills > li {
+  display: inline-block;
+}
+
+#header {
+  background-color: #000;
+  color: #ffffff;
+}
+
+.container {
+  margin: 10px;
+  padding: 25px;
+  align-content: center;
+  background-color: #fff;
+  color: #999;
+}
+
+.h1 {
   background-color: black;
-  border-style: solid;
-  border-color: none;
-  border-left-color: white;
-  border-bottom: none;
-  border-right: none;
-  border-top: none;
-  border-width: 1px;
   padding-top: 50px;
-  padding-bottom: 0px;
+  padding-bottom: 50px;
   padding-left: 50px;
   padding-right: 50px;
-  margin-top: 10px;
-  margin-bottom: 10px;
-  margin-left: 0px;
-  margin-right: 0px;
   color: white;
   font-style: normal;
-  font-family: "Lucida Sans Unicode", sans-serif;
   font-size: 20px;
   text-align: center;
 }
 
-article {
-  background-color: black;
-  height: 100px;
-  width: 300px;
-  border-style: solid;
-  border-color: none;
-  border-left-color: white;
-  border-bottom: none;
-  border-right: none;
-  border-top: none;
-  border-width: 1px;
-  padding-top: 50px;
-  padding-bottom: 0px;
-  padding-left: 50px;
-  padding-right: 50px;
-  margin-top: 10px;
-  margin-bottom: 10px;
-  margin-left: 0px;
-  margin-right: 0px;
-  color: white;
-  font-style: normal;
-  font-family: "Lucida Sans Unicode", sans-serif;
-  font-size: 20px;
-  text-align: center;
-}
-
-img {
+.img {
   border: 1px;
   border-radius: 50%;
   padding: 5px;
@@ -82,35 +66,15 @@ a:hover {
 }
 
 
-p1 {
-  height: 200px;
-  width: 300px;
+.p1 {
   background-color: black;
-  margin-top: none;
-  margin-bottom: 100px;
-  margin-left: none;
-  margin-right: none;
-  font-family: "Lucida Sans Unicode", sans-serif;
   font-size: 14px;
   color: white;
-  border-style: solid;
-  border-left-color: white;
-  border-width: 1px;
-  border-top: none;
-  border-right: none;
-  border-bottom:none;
-  padding-top: 10px;
-  padding-bottom: 10px;
-  padding-right: 10px;
-  padding-left: 10px;
-  text-align: left;
+  text-align: center;
 
     }
 
-
-
-
-h2 {
+.h2 {
   background-color: white;
   margin-top: 100px;
   margin-bottom: 0px;
@@ -125,12 +89,11 @@ h2 {
   border-top: none;
   border-right: none;
   border-bottom:none;
-  font-family: "Lucida Sans Unicode", sans-serif;
   font-size: 20px;
 
 }
 
-p2 {
+.p2 {
   height: 200px;
   width: 300px;
   background-color: white;
@@ -138,7 +101,6 @@ p2 {
   margin-bottom: 100px;
   margin-left: none;
   margin-right: 0px;
-  font-family: "Lucida Sans Unicode", sans-serif;
   font-size: 14px;
   color: black;
   border-style: solid;
@@ -155,7 +117,7 @@ p2 {
 
     }
 
-button {
+.button {
   background-color: dimgrey;
   border: none;
   color: white;
@@ -163,4 +125,12 @@ button {
   text-align: center;
   text-decoration: none;
   font-size: 12px;
+}
+
+.footer {
+  position: fixed;
+  width: 100%;
+  background color: black;
+  color: white;
+  text-align: center;
 }
